# memory-engine

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
.claude/: settings.local.json
.tokensave/: branch-meta.json  config.json  tokensave.db  tokensave.db-shm
app/: main.py
app/api/: dependencies.py  error_handlers.py  security.py
app/core/: config.py  lifecycle.py  logging.py  paths.py
app/jobs/: conversation_summary_jobs.py  episode_jobs.py  extraction_jobs.py  job_runner.py  reflection_jobs.py  workspace_jobs.py
app/models/: enums.py
app/services/: embedding_service.py  tokenizer_service.py
app/utils/: ids.py  text.py  time.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css
data/: README.md
data/chroma/: README.md
data/sqlite/: README.md
docs/: architecture.md  intelligence-layer.md
extension/: manifest.json  package-lock.json  package.json
extension/background/: service-worker.js  worker-core.js
extension/content/: bootstrap.js  injector.js  main.js  observer.js
extension/lib/: engine-client.js  pack-renderer.js  platforms.js  settings.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js  render.js
extension/scripts/: e2e-smoke.mjs
extension/tests/: chatgpt-adapter.test.js  claude-adapter.test.js  engine-client.test.js  injector.test.js  (+5 more)
scripts/: init_db.py  llm_spotcheck.py  reset_db.py
tests/: conftest.py
(+112 files in other folders)
