[project]
name = "openmemory-engine"
version = "0.2.0"
description = "Local-first memory engine backend for OpenMemory OS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "chromadb",
  "sentence-transformers",
  "loguru",
  "httpx",
  "jsonschema",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

